# ig-padding-wasm

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
crate/: Cargo.toml
crate/src/: lib.rs
src/: App.vue  main.ts
src/assets/: base.css
