[package]
name = "crate"
description = "Apply transformations to images in the browser"
version = "0.1.0"
authors = ["Victor Lourme <hello@vlour.me>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
lol_alloc = "0.4.0"
image = { version = "0.24.7", default-features = false, features = ["jpeg", "png"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-mutable-globals"]

[profile.release]
lto = true
opt-level = "z"
strip = true

[features]
default = ["console_error_panic_hook"]
